[gd_scene load_steps=5 format=2]

[ext_resource path="res://tornillo.gd" type="Script" id=1]
[ext_resource path="res://asset/cajarnaise.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 75.0822, 68.2139 )

[sub_resource type="RectangleShape2D" id=2]

[node name="tornillo" type="RigidBody2D" groups=[
"cajas",
]]
script = ExtResource( 1 )

[node name="Collisiontorillo" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="SpriteTornillo" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="areaTornilloArriba" type="Area2D" parent="."]
position = Vector2( 0, -61.0881 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionTornilloArriba" type="CollisionShape2D" parent="areaTornilloArriba"]
shape = SubResource( 2 )

[node name="areaTornilloAbajo" type="Area2D" parent="."]
position = Vector2( 1.10803, 57.4717 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionTornilloAbajo" type="CollisionShape2D" parent="areaTornilloAbajo"]
shape = SubResource( 2 )
[connection signal="area_entered" from="areaTornilloArriba" to="." method="_on_areaTornilloArriba_area_entered"]
[connection signal="area_entered" from="areaTornilloAbajo" to="." method="_on_areaTornilloAbajo_area_entered"]
